# dspy-gepa-logger

./: .gitignore  DEMO_SETUP.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: address-pr-feedback.md  gepa-create.md  gepa-migrate.md  gepa-optimizer.md  test-example.md
.github/workflows/: python-publish.yml
docs/: IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_PROGRESS.md  TECHNICAL_ANALYSIS.md  gpt-5.2-pro.md
examples/: eg.csv  eg_sqlite_simple.py  eg_v2_simple.py
skills/ask-about-run/: SKILL.md
skills/ask-about-run/references/: analysis-patterns.md
skills/gepa-demo/: README.md  SKILL.md
skills/gepa-demo/references/: data-mapping.md  env.md  interactive-prompting.md  metrics.md  repo-setup.md  user-journeys.md  web-dashboard.md
skills/migrate-gepa/: SKILL.md
skills/migrate-gepa/references/: api-reference.md  examples.md
skills/observable-gepa-optimizer/: SKILL.md
skills/observable-gepa-optimizer/references/: metric-templates.md  multimodal-patterns.md  task-types.md
skills/observable-gepa-optimizer/use-cases/: create-from-scratch.md  migration.md
skills/orizu-optimize/: SKILL.md
skills/orizu-optimize/references/: budget-guide.md  data-analysis.md  llm-judge-examples.md  optimization-template.md  scorer-patterns.md
skills/orizu-optimize/scripts/: check-dashboard.py  validate-env.py
src/dspy_gepa_logger/: __init__.py  api.py
src/dspy_gepa_logger/core/: __init__.py  config.py  lm_logger.py  logged_metric.py  logged_proposer.py  serialization.py  (+4 more)
src/gepa_observable/: __init__.py  _lm_integration.py  _version.py  api.py  gepa.py  observers.py
tests/: test_api_v2.py  test_basic.py  test_context.py  test_lm_logger.py  test_logged_metric.py  test_logged_proposer.py  test_sqlite_integration.py  test_state_logger.py  test_tracker_v2.py
web/: README.md  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/lib/: prisma.ts  sse-emitter.ts
web/prisma/: schema.prisma
(+90 files in other folders)
