[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dspy-gepa-logger"
dynamic = ["version"]
description = "Comprehensive logging and visualization infrastructure for DSPy GEPA optimization runs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Raveesh" }
]
keywords = ["dspy", "gepa", "logging", "optimization", "llm", "prompt-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dspy>=2.5.0",
    "gepa>=0.0.22",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
mlflow = [
    "mlflow>=2.0.0",
]

[project.scripts]
gepa-report = "dspy_gepa_logger.export.html_report:main"

[project.urls]
Homepage = "https://github.com/raveeshbhalla/dspy-gepa-logger"
Repository = "https://github.com/raveeshbhalla/dspy-gepa-logger"
Issues = "https://github.com/raveeshbhalla/dspy-gepa-logger/issues"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/dspy_gepa_logger", "src/gepa_observable"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dspy_gepa_logger/_version.py"
